FEB 16 2021
	Global XP/hr calculation is now accurate.
	AIOFighter, AIOThiever, LimpySnapez, GetMeToArdougne, HarvesterTrainer, HerbHarvester, HerbIdentifier, PowerFletcha now have paint progress reports. 
	Flaxx0r now tracks flax per hour.
	Searos updated Controller isDoorOpen to work on the crafting guild door.
	Searos updated many of his scripts to support Paint
	isInCombat() and isNpcInCombat() are now realtime and do not work based off the health bar. Thieving and fighting are much more efficient!
	
FEB 15 2021
    The client now has a patcher for patching the JAR for callbacks, see updated readme and https://gitlab.com/idlersc/idlersc_patcher
    The client now shows status, coordinates, and XP gained on the main client window via the DrawCallback class.
    paintInterrupt() is now available to scripts. This is how you paint on the screen -- see AKMiner for an example.
    AKMiner now has a basic paint progress report.
    PositionListener, MessageListener axed
    MessageListener replaced with MessageCallback
    Fixed NPE in openBank() caused by no teller or bank chest around.
    Fixed annoying bug in walkPath()
    Scripts can now modify the status text via Controller.setStatus();
    "npcMessage" has been changed to "questMessage" to be more consistent
    Flaxx0r script released! Picks and banks flax in Seers Village.
    Added Searos' ArrowMaker script
    Updated Searos' BuyFromShop -- now supports non-stackables via banking
    Updated Searos' SellToShop -- now banks if it runs out
    Updated Controller.getNearestBank() to find Falador West (Searos)
    Added STS style level up message and screenshot. 

FEB 12 2021
	getDirection(x, y) will no longer return null if standing on x,y
	atObject2 now uses getDirection(x,y)
	isDoorOpen(x,y) will now say that barbarian walls are closed
	openDoor(x,y) will now properly handle barbarian walls
	getWallObjectIdAtCoord(x,y) added to controller
	Added random offset to autologin to avoid flooding login